-- ircd-hybrid-8.0.0 Release Notes
o) Fixed an off-by-one with spoofs. Spoofs are now also checked for
   invalid characters
o) Removed general::use_whois_actually configuration directive. This is
   now enabled by default
o) Minor SQUIT handling fixes
o) Fixed bancache not being updated on CHGHOST/CHGIDENT


-- ircd-hybrid-8rc1 Release Notes
o) Removed general::client_flood configuration option and added the
   new 'recvq' configuration directive to class{} blocks.
   The max size of a receive queue can be seen in "STATS Y"
   for each class
o) Allow the '[' and ']' characters in server description


-- ircd-hybrid-8beta3 Release Notes
o) Fixed wrong syntax in several language files
o) Removed &localchannels
o) PRIVMSG to opers@some.server is no longer supported
o) Fixed bug that could lead to topic desynchronization
o) Removed serverhide::disable_hidden configuration option
o) Dropped ircd-hybrid-6 GLINE compatibility mode
o) Removed use_invex, use_except and use_knock configuration options.
   These features are now enabled by default


-- ircd-hybrid-8beta2 Release Notes
o) channel::disable_fake_channels now also disables ascii 29 (mIRC italic)
   when set to yes
o) Added channel::max_chans_per_oper configuration directive. The old way
   was to let operators join three times the amount of max_chans_per_user
o) Replaced MODLOAD, MODUNLOAD, MODRELOAD, MODLIST and MODRESTART commands
   with the new MODULE command which can be fed with the LOAD, UNLOAD, RELOAD
   and LIST parameters.
   MODRESTART has been entirely removed. Use "MODULE RELOAD *" to reload
   all modules
o) Added back server notice when a client tries to obtain a reserved nick name
o) Removed OMOTD module
o) Added 'set' to operator privilege flags. Gives access to the "SET" command
o) Improved TS6 support
o) Channel keys/passwords are now case sensitive


-- ircd-hybrid-8beta1 Release Notes
o) Implemented full services support, including but not limited to the
   following changes: